--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1>This is my Github Page</h1>
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="tribute-project/index.html">Tribute Page</a></li>
+        </ul>
     </body>
 </html>
