--- a/tribute-project/index.html
+++ b/tribute-project/index.html
@@ -5,27 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Tribute Page</title>
+    <title>Robin Williams</title>
 </head>
 <body>
     <div id="main">
-        <h1 id="title">Louis Le Prince</h1>
-        <p>The Unsung Father of Cinematography</p>
+        <header class="header">
+            <div class="text-vertical-center">
+                <h1 id="title">Robin Williams</h1>
+            </div>
+            <img src="assets/images/headerDivider.png" alt="">
+        </header>
         
-        <div id="img-div">
-            <img src="images/Louisleprincerestored.png" alt="Louis Le Prince" id="image">
-            <div id="img-caption">Le Prince c. 1885</div>
+        <div id="tribute-info">
+            <header>
+                <div id="img-div">
+                    <img src="assets/images/robin-williams.jpg">
+                </div>
+                <h1 id="img-caption">Life of <br/> Robin Williams</h1>
+                
+            </header>
+            <ul>
+                <li>
+                    <div class="event-bullet bullet-place"></div>
+                    <div class="event_content">
+                        <h2>Birth</h2>
+                        <p>Robin McLaurin Williams was born at St. Luke's Hospital in Chicago, Illinois.</p>
+                    </div>
+                    <div class="event_date">
+                        July 21, 1951
+                    </div>
+                </li>
+                <li>
+                    <div class="event-bullet bullet-place"></div>
+                    <div class="event_content">
+                        <h2>College</h2>
+                        <p>Williams attained a full scholarship to the Juilliard School (Group 6, 1973–1976) in New York City. He was one of 20 students accepted into the freshman class, and he and Christopher Reeve were the only two accepted by John Houseman into the Advanced Program at the school that year.</p>
+                    </div>
+                    <div class="event_date">
+                        1973
+                    </div>
+                </li>
+            </ul>
         </div>
-        <section id="tribute-info">
-            <h2>Life</h2>
-            <h4>Childhood</h4>
-            <p>Le Prince was born on 28 August 1841 in Metz. His family referred to him as "Augustin" and English-speaking friends would later call him "Gus". Le Prince's father was a major of artillery in the French Army and an officer of the Légion d'honneur. He grew up spending time in the studio of his father's friend, the photography pioneer Louis Jacques Mandé Daguerre, from whom the young Le Prince allegedly received lessons relating to photography and chemistry and for whom he was the subject of a Daguerrotype, an early type of photograph. His education went on to include the study of painting in Paris and post-graduate chemistry at Leipzig University, which provided him with the academic knowledge he was to utilise in the future.</p>
-
-            <h4>Adulthood</h4>
-            <p>He moved to Leeds, England, UK in 1866, after being invited to join John Whitley, a friend from college, in Whitley Partners of Hunslet, a firm of brass founders making valves and components. In 1869 he married Elizabeth Whitley, John's sister and a talented artist. The couple started a school of applied art, the Leeds Technical School of Art, in 1871, and became well renowned for their work in fixing colour photography on to metal and pottery, leading to them being commissioned for portraits of Queen Victoria and the long-serving Prime Minister William Gladstone produced in this way; these were included alongside other mementos of the time in a time capsule—manufactured by Whitley Partners of Hunslet—which was placed in the foundations of Cleopatra's Needle on the embankment of the River Thames.</p>
-            <p>In 1881 Le Prince went to the United States as an agent for Whitley Partners, staying in the country along with his family once his contract had ended. He became the manager for a small group of French artists who produced large panoramas, usually of famous battles, that were exhibited in New York City, Washington, D.C. and Chicago.</p>
-        </section>
-        <h4 id="tribute-link">If you want to know more about Louis Le Prince, you can read it on his <a href="https://en.wikipedia.org/wiki/Louis_Le_Prince" target="_blank">Wikipedia Entry</a></h4>
+        <a href="" id="tribute-link" target="_blank"></a>
     </div>
 </body>
 </html>
