--- a/tribute-project/index.html
+++ b/tribute-project/index.html
@@ -5,49 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Robin Williams</title>
+    <title>Freddie Mercury</title>
 </head>
 <body>
-    <div id="main">
-        <header class="header">
-            <div class="text-vertical-center">
-                <h1 id="title">Robin Williams</h1>
-            </div>
-            <img src="assets/images/headerDivider.png" alt="">
-        </header>
-        
-        <div id="tribute-info">
-            <header>
-                <div id="img-div">
-                    <img src="assets/images/robin-williams.jpg">
-                </div>
-                <h1 id="img-caption">Life of <br/> Robin Williams</h1>
-                
-            </header>
-            <ul>
-                <li>
-                    <div class="event-bullet bullet-place"></div>
-                    <div class="event_content">
-                        <h2>Birth</h2>
-                        <p>Robin McLaurin Williams was born at St. Luke's Hospital in Chicago, Illinois.</p>
-                    </div>
-                    <div class="event_date">
-                        July 21, 1951
-                    </div>
-                </li>
-                <li>
-                    <div class="event-bullet bullet-place"></div>
-                    <div class="event_content">
-                        <h2>College</h2>
-                        <p>Williams attained a full scholarship to the Juilliard School (Group 6, 1973–1976) in New York City. He was one of 20 students accepted into the freshman class, and he and Christopher Reeve were the only two accepted by John Houseman into the Advanced Program at the school that year.</p>
-                    </div>
-                    <div class="event_date">
-                        1973
-                    </div>
-                </li>
-            </ul>
+    <header class="header">
+        <div class="text-vert-cent">
+            <h1 id="title">Freddie Mercury</h1>
         </div>
-        <a href="" id="tribute-link" target="_blank"></a>
+    </header>
+    <div id="main">
+        <div id="img-div">
+            <div class="contain-img">
+                <div class="img-avatar">
+                    <img src="assets/images/freddie-mercury.png" alt="freddie-mercury" id="image">
+                </div>
+            </div>
+            <p id="img-caption">The Life of Freddie Mercury</p>
+        </div>
+        <div id="tribute-info">
+            <div class="container left">
+                <div class="content">
+                    <h2>2017</h2>
+                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                </div>
+            </div>
+            <div class="container right">
+                <div class="content">
+                    <h2>2016</h2>
+                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                </div>
+            </div>
+        </div>
+        <a href="https://en.wikipedia.org/wiki/Freddie_Mercury" id="tribute-link" target="_blank"></a>
     </div>
 </body>
 </html>
