--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h2>Projects</h2>
         <ul>
             <li><a href="tribute-project/index.html">Tribute Page</a></li>
+            <li><a href="survey-forms/index.html">Tribute Page</a></li>
         </ul>
     </body>
 </html>
