--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="tribute-project/index.html">Tribute Page</a></li>
             <li><a href="survey-forms/index.html">Survey Forms</a></li>
+            <li><a href="chess/index.html">Chess</a></li>
         </ul>
     </body>
 </html>
