--- a/chess/index.html
+++ b/chess/index.html
@@ -4,12 +4,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Chess</title>
 </head>
 <body>
     <div id="main">
+        <h1>Chess</h1>
         <div id="board">
-            <div id="a8"></div>
+            <!--8-->
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <!--7-->
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <!--6-->
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <!--7-->
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <!--8-->
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <!--7-->
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <!--6-->
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <!--7-->
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
+            <div class="black-sq"></div>
+            <div class="white-sq"></div>
         </div>
     </div>
 </body>
