--- a/chess/index.html
+++ b/chess/index.html
@@ -12,23 +12,23 @@
         <h1>Chess</h1>
         <div id="board">
             <!--8-->
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
+            <div class="white-sq"><img src="assets/images/black-rook.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/black-horse.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/black-bishop.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/black-queen.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/black-king.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/black-bishop.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/black-horse.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/black-rook.png" alt="black-rook"></div>
             <!--7-->
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
+            <div class="black-sq"><img src="assets/images/black-pawn.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/black-pawn.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/black-pawn.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/black-pawn.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/black-pawn.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/black-pawn.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/black-pawn.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/black-pawn.png" alt="black-rook"></div>
             <!--6-->
             <div class="white-sq"></div>
             <div class="black-sq"></div>
@@ -66,23 +66,23 @@
             <div class="black-sq"></div>
             <div class="white-sq"></div>
             <!--6-->
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
+            <div class="white-sq"><img src="assets/images/white-pawn.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/white-pawn.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/white-pawn.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/white-pawn.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/white-pawn.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/white-pawn.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/white-pawn.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/white-pawn.png" alt="black-rook"></div>
             <!--7-->
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
-            <div class="black-sq"></div>
-            <div class="white-sq"></div>
+            <div class="black-sq"><img src="assets/images/white-rook.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/white-horse.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/white-bishop.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/white-queen.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/white-king.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/white-bishop.png" alt="black-rook"></div>
+            <div class="black-sq"><img src="assets/images/white-horse.png" alt="black-rook"></div>
+            <div class="white-sq"><img src="assets/images/white-rook.png" alt="black-rook"></div>
         </div>
     </div>
 </body>
