--- a/index.html
+++ b/index.html
@@ -1,16 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title></title>
-    </head>
-    <body>
-        <h1>This is my Github Page</h1>
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="tribute-project/index.html">Tribute Page</a></li>
-            <li><a href="survey-forms/index.html">Survey Forms</a></li>
-            <li><a href="chess/index.html">Chess</a></li>
-        </ul>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>JM Arenas - Github Page</title>
+</head>
+<body>
+    <header>
+        <div class="titleWrapper">
+            <h1 class="coreTitle">This is my Github Page</h1>
+        </div>
+    </header>
+    <div id="projects" class="container">
+        <div class="titleWrapper">
+            <h2 class="coreTitle">Projects</h2>
+        </div>
+        <div class="contentContainer">
+            <div class="component">
+                <div class="contentWrapper">
+                    <a href="projects/tribute-project/index.html" target="_blank">
+                        <div class="imageWrapper" style="background-image: url(assets/images/FireShot\ Capture\ 001\ -\ Freddie\ Mercury\ -\ localhost.png); background-size: cover;"></div>
+                        <div class="contentCaption">
+                            <h3 class="coreTitle">Tribute Page</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="component">
+                <div class="contentWrapper">
+                    <a href="projects/survey-forms/index.html" target="_blank">
+                        <div class="imageWrapper" style="background-image: url(assets/images/FireShot\ Capture\ 003\ -\ Lucky\ Winner\ -\ localhost.png); background-size: cover; background-position: center;"></div>
+                        <div class="contentCaption">
+                            <h3 class="coreTitle">Survey Form</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="component">
+                <div class="contentWrapper">
+                    <a href="projects/chess/flexbox-chess.html" target="_blank">
+                        <div class="imageWrapper" style="background-image: url(assets/images/FireShot\ Capture\ 005\ -\ Chess\ -\ localhost.png); background-size: cover; background-position: center;"></div>
+                        <div class="contentCaption">
+                            <h3 class="coreTitle">Chess - Flexbox</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="component">
+                <div class="contentWrapper">
+                    <a href="projects/chess/flexbox-chess.html" target="_blank">
+                        <div class="imageWrapper" style="background-image: url(assets/images/FireShot\ Capture\ 004\ -\ Grid\ -\ Chess\ Board\ -\ localhost.png); background-size: cover; background-position: center;"></div>
+                        <div class="contentCaption">
+                            <h3 class="coreTitle">Chess - Grid</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="component">
+                <div class="contentWrapper">
+                    <a href="projects/product/index.html" target="_blank">
+                        <div class="imageWrapper" style="background-image: url(assets/images/FireShot\ Capture\ 006\ -\ monday.com\ -\ localhost.png); background-size: cover;"></div>
+                        <div class="contentCaption">
+                            <h3 class="coreTitle">Product Landing Page</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
