--- a/projects/tic-tac-toe/index.html
+++ b/projects/tic-tac-toe/index.html
@@ -8,6 +8,7 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
-    <canvas id="ttt-board"></canvas>
+    <div id="ttt-board"></div>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
