Switched player characters

--- a/projects/tic-tac-toe/index.html
+++ b/projects/tic-tac-toe/index.html
@@ -10,8 +10,8 @@
   <body>
     <div id="main">
       <div id="players">
-        <div class="current-player" id="player1"><h1>X</h1></div>
-        <div class="" id="player2"><h1>O</h1></div>
+        <div class="current-player" id="player1"><h1>O</h1></div>
+        <div class="" id="player2"><h1>X</h1></div>
       </div>
       <div id="ttt-board"></div>
     </div>
