Added winning player indicator in the board

--- a/projects/tic-tac-toe/index.html
+++ b/projects/tic-tac-toe/index.html
@@ -10,10 +10,42 @@
   <body>
     <div id="main">
       <div id="players">
-        <div class="current-player" id="player1"><h1>O</h1></div>
+        <div class="current-player blue" id="player1"><h1>O</h1></div>
         <div class="" id="player2"><h1>X</h1></div>
       </div>
       <div id="ttt-board"></div>
+      <svg class="horizontal top">
+        <line x1="0" y1="0" x2="450" y2="0" />
+        Sorry, your browser does not support inline SVG.
+      </svg>
+      <svg class="horizontal mid">
+        <line x1="0" y1="0" x2="450" y2="0" />
+        Sorry, your browser does not support inline SVG.
+      </svg>
+      <svg class="horizontal bot">
+        <line x1="0" y1="0" x2="450" y2="0" />
+        Sorry, your browser does not support inline SVG.
+      </svg>
+      <svg class="vertical left">
+        <line x1="0" y1="0" x2="0" y2="450" />
+        Sorry, your browser does not support inline SVG.
+      </svg>
+      <svg class="vertical mid">
+        <line x1="0" y1="0" x2="0" y2="450" />
+        Sorry, your browser does not support inline SVG.
+      </svg>
+      <svg class="vertical right">
+        <line x1="0" y1="0" x2="0" y2="450" />
+        Sorry, your browser does not support inline SVG.
+      </svg>
+      <svg class="diagonal">
+        <line x1="0" y1="0" x2="450" y2="450" />
+        Sorry, your browser does not support inline SVG.
+      </svg>
+      <svg class="diagonal">
+        <line x1="450" y1="0" x2="0" y2="450" />
+        Sorry, your browser does not support inline SVG.
+      </svg>
     </div>
 
     <script src="assets/js/script.js"></script>
