--- a/projects/tic-tac-toe/index.html
+++ b/projects/tic-tac-toe/index.html
@@ -20,6 +20,11 @@
           <h1>X</h1>
         </div>
       </div>
+      <div class="history-buttons">
+        <button id="btn-prev">|<<</button>
+        <button id="btn-reset">Reset</button>
+        <button id="btn-next">>>|</button>
+      </div>
       <svg class="horizontal top">
         <line x1="0" y1="0" x2="450" y2="0" />
         Sorry, your browser does not support inline SVG.
