Removed win indicator and Finished history function

--- a/projects/tic-tac-toe/index.html
+++ b/projects/tic-tac-toe/index.html
@@ -23,40 +23,8 @@
       <div class="history-buttons">
         <button id="btn-prev">|<<</button>
         <button id="btn-reset">Reset</button>
-        <button id="btn-next">>>|</button>
+        <button id="btn-next" disabled>>>|</button>
       </div>
-      <svg class="horizontal top">
-        <line x1="0" y1="0" x2="450" y2="0" />
-        Sorry, your browser does not support inline SVG.
-      </svg>
-      <svg class="horizontal mid">
-        <line x1="0" y1="0" x2="450" y2="0" />
-        Sorry, your browser does not support inline SVG.
-      </svg>
-      <svg class="horizontal bot">
-        <line x1="0" y1="0" x2="450" y2="0" />
-        Sorry, your browser does not support inline SVG.
-      </svg>
-      <svg class="vertical left">
-        <line x1="0" y1="0" x2="0" y2="450" />
-        Sorry, your browser does not support inline SVG.
-      </svg>
-      <svg class="vertical mid">
-        <line x1="0" y1="0" x2="0" y2="450" />
-        Sorry, your browser does not support inline SVG.
-      </svg>
-      <svg class="vertical right">
-        <line x1="0" y1="0" x2="0" y2="450" />
-        Sorry, your browser does not support inline SVG.
-      </svg>
-      <svg class="diagonal">
-        <line x1="0" y1="0" x2="450" y2="450" />
-        Sorry, your browser does not support inline SVG.
-      </svg>
-      <svg class="diagonal">
-        <line x1="450" y1="0" x2="0" y2="450" />
-        Sorry, your browser does not support inline SVG.
-      </svg>
     </div>
 
     <script src="assets/js/script.js"></script>
