Added a better winning indicator
changed from line indicator to change tile color

--- a/projects/tic-tac-toe/index.html
+++ b/projects/tic-tac-toe/index.html
@@ -14,11 +14,11 @@
         <div id="players">
           <div id="players-shell">
             <div class="current-player blue" id="player1">
-              <h2>Player1</h2>
+              <h2 id="p1-name">Player1</h2>
               <h1>O</h1>
             </div>
             <div class="" id="player2">
-              <h2>Computer</h2>
+              <h2 id="p2-name">Computer</h2>
               <h1>X</h1>
             </div>
           </div>
