Added vs player or vs computer

--- a/projects/tic-tac-toe/index.html
+++ b/projects/tic-tac-toe/index.html
@@ -17,6 +17,18 @@
               <h2 id="p1-name">Player1</h2>
               <h1>O</h1>
             </div>
+            <div id="versus">
+              <img
+                id="vsAi"
+                src="assets/images/1p.png"
+                alt="Player vs Computer"
+              />
+              <img
+                id="vs2p"
+                src="assets/images/2p.png"
+                alt="Player vs Computer"
+              />
+            </div>
             <div class="" id="player2">
               <h2 id="p2-name">Computer</h2>
               <h1>X</h1>
