--- a/projects/tic-tac-toe/index.html
+++ b/projects/tic-tac-toe/index.html
@@ -15,23 +15,23 @@
           <div id="players-shell">
             <div class="current-player blue" id="player1">
               <h2 id="p1-name">Player1</h2>
-              <h1>O</h1>
+              <h1 id="p1-char">X</h1>
             </div>
             <div id="versus">
               <img
-                id="vsAi"
+                id="vs-ai"
                 src="assets/images/1p.png"
                 alt="Player vs Computer"
               />
               <img
-                id="vs2p"
+                id="vs-2p"
                 src="assets/images/2p.png"
-                alt="Player vs Computer"
+                alt="Player vs Player"
               />
             </div>
             <div class="" id="player2">
               <h2 id="p2-name">Computer</h2>
-              <h1>X</h1>
+              <h1 id="p2-char">O</h1>
             </div>
           </div>
         </div>
