Added curtain for dramatic entrance

--- a/projects/tic-tac-toe/index.html
+++ b/projects/tic-tac-toe/index.html
@@ -8,6 +8,14 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
+    <div id="curtain">
+      <div id="top-curtain">
+        <h1 id="top-title">TIC TAC TOE</h1>
+      </div>
+      <div id="bot-curtain">
+        <h1 id="bot-title">TIC TAC TOE</h1>
+      </div>
+    </div>
     <div id="main">
       <div id="ttt-board"></div>
       <div class="containers">
