--- a/projects/tic-tac-toe/index.html
+++ b/projects/tic-tac-toe/index.html
@@ -21,7 +21,7 @@
       <div class="containers">
         <div id="players">
           <div id="players-shell">
-            <div class="current-player blue" id="player1">
+            <div class="current-player" id="player1">
               <h2 id="p1-name">Player1</h2>
               <h1 id="p1-char">X</h1>
             </div>
